Ajustes no endpoint /categorias/{id}

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port =${port:8081}
 
 # datasource
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:file:~/test
+spring.datasource.url=jdbc:h2:mem:barrg   
 spring.datasource.username=sa
 spring.datasource.password=
 
