--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ server.port =${port:8081}
 
 spring.profiles.active=test
 
+default.sender=chimenes.rocha@gmail.com
+default.recipient=chimenes.rocha@gmail.com
