Implementando SmtpEmailService com servidor do Google

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port =${port:8081}
 
-spring.profiles.active=test
+spring.profiles.active=dev
 
-default.sender=chimenes.rocha@gmail.com
-default.recipient=chimenes.rocha@gmail.com
+default.sender=glener.cursos@gmail.com
+default.recipient=glener.cursos@gmail.com
