--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,4 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring
+#spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring
+spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring?useTimezone=true&serverTimezone=UTC
+
 spring.datasource.username=root
 spring.datasource.password=
 
@@ -8,7 +10,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.username=glener.cursos@gmail.com
-spring.mail.password=
+spring.mail.password=@Spring_10
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.socketFactory.port=465
 spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
