--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -15,3 +15,5 @@ spring.jpa.properties.hibernate.format_sql=true
 # h2
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+
+spring.mail.host: 127.0.0.1
