--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port =${port:8081}
+spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring?useTimezone=true&serverTimezone=UTC
 
-spring.profiles.active=dev
+spring.profiles.active=test
 
 default.sender=glener.cursos@gmail.com
 default.recipient=glener.cursos@gmail.com
