Implementando autenticacao e geracao do token JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.profiles.active=test
 
 default.sender=glener.cursos@gmail.com
 default.recipient=glener.cursos@gmail.com
+
+jwt.secret=SequenciaDeCaracteresParaToken
+jwt.expiration=60000
