--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
 server.port =${port:8081}
 spring.datasource.url=jdbc:mysql://localhost:3306/curso_spring?useTimezone=true&serverTimezone=UTC
 
-spring.profiles.active=test
+spring.profiles.active=dev
 
 default.sender=glener.cursos@gmail.com
 default.recipient=glener.cursos@gmail.com
 
 jwt.secret=SequenciaDeCaracteresParaToken
-jwt.expiration=60000
+jwt.expiration=86400000
+
+aws.access_key_id=
+aws.secret_access_key=
+s3.bucket=bar-rg
+s3.region=sa-east-1
